demo/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless
spec:
  clusterIP: None # 이 부분이 headless service로 만드는 부분이다.
  selector:
    app.kubernetes.io/name: rabbitmq
  ports:
    - protocol: TCP
      port: 15672
      targetPort: 15762
