demo/k8s-ingress-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-service-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: "demo-service.local"
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: demo-service
                port:
                  number: 8080
